iniciando con facebook

--- a/app/index.html
+++ b/app/index.html
@@ -9,140 +9,11 @@
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/animate.css">
-	<link href="plugins/owl/owl.carousel.css" rel="stylesheet">
-	<link href="plugins/owl/owl.theme.css" rel="stylesheet">
-	<link href="plugins/owl/owl.transitions.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/helpers.css">
 	<link rel="stylesheet" href="css/custom.css">
 	<link href="https://fonts.googleapis.com/css?family=Monda:400,700" rel="stylesheet">
 </head>
 <body>
-	<div data-role="page" id="login">
-		<main id="main_login">
-			<div class="bgCover"></div>
-			<div class="z-container">
-				<div class="hFull z-block" style="height: 638px;max-height: 638px;">
-					<div class="z-content z-contentMiddle">
-						<div class="z-row">
-							<div class="z-col-lg-6 z-col-md-8 z-col-sm-10 z-col-xs-12 z-col-lg-offset-3 z-col-md-offset-2 z-col-sm-offset-1 z-col-xs-offset-0">
-								<img src="images/logos/logo.png" class="centered z-forceBlock wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.5s; animation-name: fadeInDown;">
-							</div>
-						</div>
-						<div class="clear h100"></div>
-						<div class="z-row wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" style="visibility: visible; animation-duration: 1s; animation-delay: 1s; animation-name: fadeInUp;">
-							<div class="z-col-xs-12">
-								<h1 class="cWhite text-center s25">Bienvenido</h1>
-							</div>
-							<div class="z-col-lg-4 z-col-lg-offset-2 z-col-md-4 z-col-md-offset-2 z-col-sm-4 z-col-sm-offset-2 z-col-xs-8 z-col-xs-offset-2">
-								<a class="z-btn h50 btn-rounded bgGreen cWhite s20 text-center noTransform boxShadow" data-toggle="modal" data-target="#loginModal">Inicia sesión<br>
-								</a>
-								<div class="clear">
-
-								</div>
-							</div>
-							<div class="z-col-lg-4 z-col-md-4 z-col-sm-4 z-col-sm-offset-0 z-col-xs-8 z-col-xs-offset-2">
-								<a class="z-btn btn-rounded h50 bgLightBlue cWhite s20 text-center noTransform boxShadow" data-toggle="modal" data-target="#regModal">Crea una cuenta</a>
-								<div class="clear"></div>
-							</div>
-							<div class="z-col-lg-6 z-col-md-8 z-col-sm-10 z-col-xs-12 z-col-lg-offset-3 z-col-md-offset-2 z-col-sm-offset-1 z-col-xs-offset-0"><a href="#socios" class="cWhite s15 text-center noTransform z-block">Acceso a Socios</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</main>
-		<div class="modal fade bgWhite" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" data-keyboard="false" data-backdrop="static">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content noShadow noBorder bgTransparent">
-					<div class="modal-header">
-						<button type="button" class="ui-btn ui-icon-delete  ui-btn-icon-right close-modal" data-dismiss="modal" aria-label="Close"></button>
-						<h4 class="modal-title">Ingresa</h4>
-					</div>
-					<div class="modal-body">
-						<form id="lognUser" class="form-section">
-							<input type="hidden" id="action" value="loginU" name="action">
-							<label for="logUser"></label>
-							<input id="logUser" type="email" placeholder="Usuario" name="logUser" value="">
-							<div class="clear"></div>
-							<label for="logPass"></label>
-							<input id="logPass" type="password" autocomplete="off" placeholder="Contraseña" name="logPass" value="">
-							<div class="clear"></div>
-							<button type="button" id="loginU"  class="z-btn h50 btn-rounded bgGreen cWhite s20 text-center noTransform boxShadow">
-								Iniciar Sesión
-							</button>
-						</form>
-						<hr>
-						<div class="form-section">
-							<a class="z-btn btn-rounded h50 bgBlue cWhite s20 text-center noTransform boxShadow">
-								Facebook
-							</a>
-							<div class="clear"></div>
-							<a class="z-btn btn-rounded h50 bgRed cWhite s20 text-center noTransform boxShadow">
-								Google+
-							</a>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-		<div class="modal fade bgWhite" id="regModal" tabindex="-1" role="dialog" aria-labelledby="regModalLabel" data-keyboard="false" data-backdrop="static">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content noShadow noBorder bgTransparent">
-					<div class="modal-header">
-						<button type="button" class="ui-btn ui-icon-delete  ui-btn-icon-right close-modal" data-dismiss="modal" aria-label="Close"></button>
-						<h4 class="modal-title">Registrate</h4>
-					</div>
-					<div class="modal-body">
-						<form id="registerUser" class="form-section">
-
-							<label for="ruMail"></label>
-							<input id="ruMail" type="email" placeholder="Correo" name="ruMail" value="" required>
-
-							<div class="clear"></div>
-
-							<label for="ruPass"></label>
-							<input id="ruPass" type="password" class="form-control" placeholder="Contraseña" name="ruPass" value="" required>
-
-							<div class="clear"></div>
-							<button type="button" id="crteAccountE" class="z-btn btn-rounded h50 bgGreen cWhite s20 text-center noTransform boxShadow">
-								Crear cuenta
-							</button>
-						</form>
-						<hr>
-						<div class="form-section">
-							<a class="z-btn btn-rounded h50 bgBlue cWhite s20 text-center noTransform boxShadow">
-								Facebook
-							</a>
-							<div class="clear"></div>
-							<a href="main.<?php  ?>" class="z-btn btn-rounded h50 bgRed cWhite s20 text-center noTransform boxShadow">
-								Google+
-							</a>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-	<div data-role="page" id="socios">
-		asdas
-	</div>
-	<div data-role="page" id="editProfile">
-		<div data-role="header" data-theme="b">
-			<h1>Dialog</h1>
-		</div><!-- /header -->
-
-		<div role="main" class="ui-content">
-			<h2>Popup</h2>
-			<p>I have an id of "popup" on my page container and only look like a dialog because the link to me had a <code>data-rel="dialog"</code> attribute which gives me this inset look and a <code>data-transition="pop"</code> attribute to change the transition to pop. Without this, I'd be styled as a normal page.</p>
-			<p><a href="#one" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-icon-back ui-btn-icon-left">Back to page "one"</a></p>
-		</div><!-- /content -->
-
-		<div data-role="footer">
-			<h4>Page Footer</h4>
-		</div><!-- /footer -->
-	</div>
 	<div data-role="page" id="main">
 		<div data-role="header" role="banner"  data-position="fixed" class="ui-header ui-bar-inherit">
 			<nav class="nav z-container-fluid bgDark boxShadow">
@@ -183,12 +54,7 @@
 					</div>
 
 				</section>
-			</main>			
-			<div class="fab" id="masterfab">
-				<span>
-					<i class="fa fa-search search-fixed" aria-hidden="true"></i>
-				</span>
-			</div>
+			</main>
 			<svg class="hidden" version="1.1" xmlns="http://www.w3.org/2000/svg">
 				<filter id="blur">
 					<feGaussianBlur stdDeviation="30" />
@@ -249,9 +115,6 @@
 					</a>
 					<div class="collapse" id="profile-dropdown">
 						<div class="list-group bgLightGrey noBorder square">
-							<a href="#editProfile" role="button" class="list-group-item cWhite s15 square noBorder noMargin bgDark">
-								Editar Perfil (socio)
-							</a>
 							<a role="button" id="logOutbtn" class="list-group-item cWhite s15 square noBorder noMargin bgDark">
 								Cerrar sesión
 							</a>
@@ -284,13 +147,157 @@
 			</div>
 		</div>
 	</div>
+	<div data-role="page" id="login">
+		<main id="main_login">
+			<div class="bgCover"></div>
+			<div class="z-container">
+				<div class="hFull z-block" style="height: 638px;max-height: 638px;">
+					<div class="z-content z-contentMiddle">
+						<div class="z-row">
+							<div class="z-col-lg-6 z-col-md-8 z-col-sm-10 z-col-xs-12 z-col-lg-offset-3 z-col-md-offset-2 z-col-sm-offset-1 z-col-xs-offset-0">
+								<img src="images/logos/logo.png" class="centered z-forceBlock wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.5s; animation-name: fadeInDown;">
+							</div>
+						</div>
+						<div class="clear h100"></div>
+						<div class="z-row wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" style="visibility: visible; animation-duration: 1s; animation-delay: 1s; animation-name: fadeInUp;">
+							<div class="z-col-xs-12">
+								<h1 class="cWhite text-center s25">Bienvenido</h1>
+							</div>
+							<div class="z-col-lg-4 z-col-lg-offset-2 z-col-md-4 z-col-md-offset-2 z-col-sm-4 z-col-sm-offset-2 z-col-xs-8 z-col-xs-offset-2">
+								<a class="z-btn h50 btn-rounded bgGreen cWhite s20 text-center noTransform boxShadow" data-toggle="modal" data-target="#loginModal">Inicia sesión<br>
+								</a>
+								<div class="clear">
+
+								</div>
+							</div>
+							<div class="z-col-lg-4 z-col-md-4 z-col-sm-4 z-col-sm-offset-0 z-col-xs-8 z-col-xs-offset-2">
+								<a class="z-btn btn-rounded h50 bgLightBlue cWhite s20 text-center noTransform boxShadow" data-toggle="modal" data-target="#regModal">Crea una cuenta</a>
+								<div class="clear"></div>
+							</div>
+							
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+		<div class="modal fade bgWhite" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" data-keyboard="false" data-backdrop="static">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content noShadow noBorder bgTransparent">
+					<div class="modal-header">
+						<button type="button" class="ui-btn ui-icon-delete  ui-btn-icon-right close-modal" data-dismiss="modal" aria-label="Close"></button>
+						<h4 class="modal-title">Ingresa</h4>
+					</div>
+					<div class="modal-body">
+						<form id="lognUser" class="form-section">
+							<input type="hidden" id="action" value="loginU" name="action">
+							<label for="logUser"></label>
+							<input id="logUser" type="email" placeholder="Usuario" name="logUser" value="" class="form-control">
+							<div class="clear"></div>
+							<label for="logPass"></label>
+							<input id="logPass" type="password" autocomplete="off" placeholder="Contraseña" name="logPass" value="" class="form-control">
+							<div class="clear"></div>
+							<button type="button" id="loginU"  class="z-btn h50 btn-rounded bgGreen cWhite s20 text-center noTransform boxShadow">
+								Iniciar Sesión
+							</button>
+						</form>
+						<hr>
+						<div class="form-section">
+							<a class="z-btn btn-rounded h50 bgBlue cWhite s20 text-center noTransform boxShadow lgn-with-fb">
+								Facebook
+							</a>
+							<div class="clear"></div>
+							<a class="z-btn btn-rounded h50 bgRed cWhite s20 text-center noTransform boxShadow">
+								Google+
+							</a>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		<div class="modal fade bgWhite" id="regModal" tabindex="-1" role="dialog" aria-labelledby="regModalLabel" data-keyboard="false" data-backdrop="static">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content noShadow noBorder bgTransparent">
+					<div class="modal-header">
+						<button type="button" class="ui-btn ui-icon-delete  ui-btn-icon-right close-modal" data-dismiss="modal" aria-label="Close"></button>
+						<h4 class="modal-title">Registrate</h4>
+					</div>
+					<div class="modal-body">
+						<form id="registerUser" class="form-section">
+
+							<label for="ruMail"></label>
+							<input id="ruMail" type="email" placeholder="Correo" name="ruMail" value="" required class="form-control">
+
+							<div class="clear"></div>
+
+							<label for="ruPass"></label>
+							<input id="ruPass" type="password" class="form-control" placeholder="Contraseña" name="ruPass" value="" required class="form-control">
+
+							<div class="clear"></div>
+							<button type="button" id="crteAccountE" class="z-btn btn-rounded h50 bgGreen cWhite s20 text-center noTransform boxShadow">
+								Crear cuenta
+							</button>
+						</form>
+						<hr>
+						<div class="form-section">
+							<a class="z-btn btn-rounded h50 bgBlue cWhite s20 text-center noTransform boxShadow">
+								Facebook
+							</a>
+							<div class="clear"></div>
+							<a href="main.<?php  ?>" class="z-btn btn-rounded h50 bgRed cWhite s20 text-center noTransform boxShadow">
+								Google+
+							</a>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<div data-role="page" id="ubicaciones">
+		<div data-role="header" data-theme="b">
+			<h1>Ubicaciones</h1><a href="#one" data-rel="back" data-iconpos="notext" data-icon="back">Regresar</a></p>
+		</div><!-- /header -->
+		<div role="main" class="ui-content">
+			<div class="container">
+				<div class="row" >
+					<ul data-role="listview" data-filter="true" data-filter-reveal="true" data-filter-placeholder="Search fruits..." data-inset="true" id="postIframes">
+						<li><button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-location" data-toggle="modal" data-target="#mapModal">pollo</button></li>
+						<li><button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-location" data-toggle="modal" data-target="#mapModal">mac donalds</button></li>
+						<li><button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-location" data-toggle="modal" data-target="#mapModal">a donde ir</button></li>
+						<li><button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-location" data-toggle="modal" data-target="#mapModal">ponziano</button></li>
+						<li><button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-location" data-toggle="modal" data-target="#mapModal">el tigre</button></li>
+						<li><button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-location" data-toggle="modal" data-target="#mapModal">bar</button></li>
+						<li><button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-location" data-toggle="modal" data-target="#mapModal">foodtruck</button></li>
+						<li><button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-location" data-toggle="modal" data-target="#mapModal">antro</button></li>
+					</ul>
+					<div class="modal fade bgWhite" id="mapModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" data-keyboard="false" data-backdrop="static">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content noShadow noBorder bgTransparent">
+								<div class="modal-header">
+									<button type="button" class="ui-btn ui-icon-delete  ui-btn-icon-right close-modal" data-dismiss="modal" aria-label="Close"></button>
+									<h4 class="modal-title">Ubicacion</h4>
+								</div>
+								<div class="modal-body" id="bodyMapModal">
+									<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6054.424636297034!2d-103.43070567192359!3d25.538962255505744!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1480463078231" width="600" height="320" frameborder="0" style="border:0;width: 100%;height: 50vh;" allowfullscreen></iframe>
+								</div>
+
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="jquery.mobile/jquery.mobile-1.4.5.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-	<script src="plugins/owl/owl.carousel.js"></script>
 	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/xpull.js"></script>
+
+	<script src="js/fb.js"></script>
 	<script type="text/javascript" src="js/app_ini.js"></script>
 </body>
 </html>
