iniciando con facebookmod

--- a/app/index.html
+++ b/app/index.html
@@ -202,7 +202,7 @@
 						</form>
 						<hr>
 						<div class="form-section">
-							<a class="z-btn btn-rounded h50 bgBlue cWhite s20 text-center noTransform boxShadow lgn-with-fb">
+							<a class="z-btn btn-rounded h50 bgBlue cWhite s20 text-center noTransform boxShadow lgn-with-fb"  target="_blank" data-rel="external" href="http://pruebasapi.esy.es/?token=asasdasd">
 								Facebook
 							</a>
 							<div class="clear"></div>
