--- a/facebook.html
+++ b/facebook.html
@@ -8,9 +8,9 @@
 <body>
   <div id="ready"></div>
   <script>
-var urlLocal="./";
-var urlRemoto="http://pruebasapi.esy.es/adic/development/";
-var urlAjax=urlRemoto;
+    var urlLocal="./";
+    var urlRemoto="http://pruebasapi.esy.es/adic/development/";
+    var urlAjax=urlRemoto;
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
     console.log('statusChangeCallback');
@@ -63,36 +63,66 @@ var urlAjax=urlRemoto;
       });
     };
 
-  
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-  $(document).on('DOMSubtreeModified','#ready', function () {
-    console.log('isLoaded');
-    var token = getParameterByName("token");
-    if (token==='') {
-    }
-    else{
-      FB.login(function(response) {
-        if (response.status === 'connected') {
-          console.log('Logged into your app and Facebook.');
-          FB.api('/me',{fields: 'name, email'}, function(response) {
-                activateT(token,response.email);
-          });
-        } else if (response.status === 'not_authorized') {
-          console.log('The person is logged into Facebook, but not your app.');
-        } else {
-          console.log('The person is not logged into Facebook, so we\'re not sure if they are logged into this app or not.');
-        }
-      },{scope: 'public_profile,email'});
-    }
-  });
 
-});
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    $(document).on('DOMSubtreeModified','#ready', function () {
+      console.log('isLoaded');
+      var token = getParameterByName("token");
+      if (token==='') {
+      }
+      else{
+        alert('getlogin');
+        FB.getLoginStatus(function(response) {
+          console.log(response);
+
+          if (response.status === 'connected') {
+            console.log('Logged into your app and Facebook.');
+            FB.api('/me',{fields: 'name, email'}, function(response) {
+              activateT(token,response.email);
+            });        
+
+          } 
+          else if (response.status === 'not_authorized') {
+            FB.login(function(response) {
+              if (response.status === 'connected') {
+                console.log('Logged into your app and Facebook.');
+                FB.api('/me',{fields: 'name, email'}, function(response) {
+                  activateT(token,response.email);
+                });
+              } else if (response.status === 'not_authorized') {
+                console.log('The person is logged into Facebook, but not your app.');
+              } else {
+                console.log('The person is not logged into Facebook, so we\'re not sure if they are logged into this app or not.');
+              }
+            },{scope: 'public_profile,email'});
+          } 
+          else {
+            FB.login(function(response) {
+              if (response.status === 'connected') {
+                console.log('Logged into your app and Facebook.');
+                FB.api('/me',{fields: 'name, email'}, function(response) {
+                  activateT(token,response.email);
+                });
+              } else if (response.status === 'not_authorized') {
+                console.log('The person is logged into Facebook, but not your app.');
+              } else {
+                console.log('The person is not logged into Facebook, so we\'re not sure if they are logged into this app or not.');
+              }
+            },{scope: 'public_profile,email'});
+          }
+
+        });
+
+      }
+    });
+
+  });
   function activateT(token,email){
     var data = {'action': 'activateT','token':token,'email':email};
     $.ajax({
