se agrego getNegocios

--- a/facebook.html
+++ b/facebook.html
@@ -77,7 +77,7 @@
       if (token==='') {
       }
       else{
-        alert('getlogin');
+        alert('espera un momento mientras conectamos con facebook');
         FB.getLoginStatus(function(response) {
           console.log(response);
 
