--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <h2 class="section-heading cWhite">¡Encuentra los mejores lugares para salir en tu ciuidad!</h2>
+            <h2 class="section-heading cWhite">¡Encuentra los mejores lugares para salir en tu ciudad!</h2>
             <p class="cLightGrey">Estámos disponibles para cualquier dispositivo móvil, ¡Búscanos en tu appStore!</p>
             <div class="badges">
               <a class="badge-link" href="#"><img src="images/google-play-badge.svg" alt=""></a>
