modificacion del getNegocios

--- a/app/index.html
+++ b/app/index.html
@@ -264,17 +264,17 @@
         <div id="map"></div>
       </div>
     </div>
-    <div data-role="page" id="profile">
+    <div data-role="page" id="negocio">
       <div data-role="header" data-theme="b">
         <h1>Perfil</h1><a href="#one" data-rel="back" data-iconpos="notext" data-icon="back">Regresar</a></p>
       </div>
       <div role="main" class="ui-content">
         <div class="z-container mainContainer noPadding">
-          <div class="clear h50"></div>
+          
           <div class="z-row">
             <div class="z-col-lg-4 z-col-md-4 z-col-sm-6 z-col-xs-12">
               <div class="z-forceBlock bgTransparent noMargin boxShadow">
-                <div class="z-block panelImg bgDarkBlue negProfImg" style="background-image:url('images/profile/01.png')">
+                <div class="z-block panelImg bgDarkBlue negProfImg" style="background-image:url('images/profPicture/default.png')">
                 </div>
                 <div class="z-block h10vh bgDarkClear">
                   <div class="z-content z-contentMiddle text-center">
