perfil con promociones

--- a/app/index.html
+++ b/app/index.html
@@ -298,6 +298,10 @@
                       <h3>Galeria</h3>
                       <p></p>
                     </div>
+                    <div data-role="collapsible">
+                      <h3>Publicaciones Actuales</h3>
+                      <div id="PromocionesPorSocio"></div>
+                    </div>
                   </div>
                 </div>
               </div>
