cambios sin guardar

--- a/app/index.html
+++ b/app/index.html
@@ -316,7 +316,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/xpull.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyBnDKUoyS0DwTs496UmycEy-GweCIW3m-U&callback=initMap">
+    <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyBnDKUoyS0DwTs496UmycEy-GweCIW3m-U">
 
 
     </script>
