font, search, dias, negocios

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
               </div>
               <div class="col-xs-4 noPadding">
                 <div class="z-content-fluid z-contentMiddle text-right">
-                  <div id="openSearch" class="cLightGrey s20 text-bold " href="#right-panel">
+                  <div id="openPanelRight" class="cLightGrey s20 text-bold " href="#right-panel">
                     <a href="#right-panel" class="searchDay bgDark noBorder"><span class="primerDiaSemana">Lunes</span><span class="fa fa-chevron-down s15"></span></a>
                   </div>
                 </div>
@@ -57,7 +57,7 @@
           </section>
           <nav class="fab-container ">
             <a href="#" tooltip="Negocios" class="buttons toggle-view-promociones">
-              <span><span class="fa fa-2x fa-exchange rotate "></span></span>
+              <span><span class="icon-adic-Promociones adic-x2 rotate "></span></span>
             </a>
           </nav>
         </main>
@@ -68,16 +68,6 @@
         </svg>
       </div>
       <div data-role="panel" id="left-panel" class="bgLightBlue" data-position-fixed="true">
-        <form class="" id="form_search">
-          <div class="z-row">
-            <div class="z-col-lg-8 z-col-md-8 z-col-sm-8 z-col-xs-12">
-              <div class="form-section">
-                <input type="text" id="search" class="form-control square has-addon" type="text" name="search" value="" placeholder="Buscar..." data-clear-btn="true">
-                <button type="button" id="searchBtn" class="z-btn cWhite bgGreen s15 form-addon"><span class="fa fa-search"></span></button>
-              </div>
-            </div>
-          </div>
-        </form>
         <div class="sidebar-nav">
           <div class="list-group bgTransparent noBorder square" id="categoriasMenu">
             <a data-id="0" data-name="A Donde Ir" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent menuCategoriaClick" data-icon="fa-home">
