--- a/app/index.html
+++ b/app/index.html
@@ -269,7 +269,7 @@
                 <div class="z-block h10vh bgDarkClear">
                   <div class="z-content z-contentMiddle text-center">
                     <h3 id="nombreSocio" class="noMargin text-uppercase text-bold text-center cWhite">Negocio</h3>
-                    <a id="ubicacionSocio" class="s15 text-center cLightBlue negocio-link ubicacionLink"  data-id="0">
+                    <a id="ubicacionSocio" class="s15 text-center cDark negocio-link ubicacionLink"  data-id="0">
                       <span class="fa fa-map-marker"></span> Ver Ubicacion
                     </a>
                   </div>
